fix #3915 wrong overflow in feature info settings

--- a/web/client/themes/default/less/panels.less
+++ b/web/client/themes/default/less/panels.less
@@ -190,12 +190,15 @@
             display: flex;
             flex-direction: column;
             position: relative;
+            overflow: hidden;
             .panel-collapse {
                 flex: 1;
                 display: flex;
+                overflow: auto;
                 .panel-body {
                     flex: 1;
                     overflow: auto;
+                    min-height: 100%;
                 }
             }
         }
